# PossGain

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Apps/: CMakeLists.txt
Apps/Noisemaker/: CMakeLists.txt
Apps/Noisemaker/Source/: Main.cpp
Apps/Tutorials/: CMakeLists.txt
Apps/Tutorials/AudioPlayer/: CMakeLists.txt
Apps/Tutorials/AudioPlayer/Source/: Main.cpp  PlayingSoundFilesTutorial_01.h  PlayingSoundFilesTutorial_02.h  PlayingSoundFilesTutorial_03.h
Apps/Tutorials/PlayingSoundFilesTutorial/: CMakeLists.txt  PlayingSoundFilesTutorial.jucer
Apps/Tutorials/PlayingSoundFilesTutorial/Source/: PlayingSoundFilesTutorial_01.h
Plugins/: CMakeLists.txt
Plugins/PossFilter/: CMakeLists.txt
Plugins/PossFilter/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PossFilter.cpp  PossFilter.hpp  PossFilterEditor.cpp  PossFilterEditor.hpp
Plugins/PossGain/: CMakeLists.txt
Plugins/PossGain/Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.h  PossGain.cpp  PossGain.hpp  StereoSignalSmoother.hpp  StereoSignalSmoother.tpp
Plugins/Posscillator/: CMakeLists.txt
Plugins/Posscillator/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
PossGain/: CMakeLists.txt
PossGain/Source/: Parameters.h  PluginEditor.cpp  PluginEditor.hpp  PossGain.cpp  PossGain.hpp
PossGain/Source/Gui/: BalanceKnob.hpp  GainKnob.hpp  InputPanel.cpp  InputPanel.hpp  OutputPanel.cpp  OutputPanel.hpp  PluginEditor.cpp  PluginEditor.hpp
PossGain/Source/Gui/Knobs/: BalanceKnob.hpp  GainKnob.hpp  PercentageKnob.hpp
PossGain/Source/Modules/Smoothed/: Smoothed.hpp
PossGain/Source/Processing/: Buffer.hpp  GainProcessor.cpp  GainProcessor.hpp  InputSelecionProcessor.cpp  InputSelecionProcessor.hpp  InputSelectionProcessor.cpp  InputSelectionProcessor.hpp  PanProcessor.cpp  PanProcessor.hpp  Processor.hpp
cmake/: fetch_gtest.cmake  platform.cmake
test/: CMakeLists.txt
test/GainProcessorTest/: CMakeLists.txt  GainProcessorTest.cpp
test/src/GainProcessorTest/: CMakeLists.txt
